2014-06-16  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (comp): Make field private.
	(setCompilation):  Allow setting to null.
	(getModuleExp): comp is always null if m is.
	* ModuleManager.java (find): Simplify to use setCompilation.
	* Compilation.java (cleanupAfterCompilation):
	Use ModileInfo#setCompilation.
	* ModuleExp.java: Use getCompilation.

2014-06-04  Per Bothner  <per@bothner.com>

	* LambdaExp.java (PUBLIC_METHOD): New field.
	(addMethodFor): Use PUBLIC_METHOD.

	* GenericProc.java (add(MethodProc[])): Rename unused method to addAll.

	* LambdaExp.java (compile): Don't create field if in dumpInitializers.
	* Compilation.java (dumpingInitializers): New field.
	(dumpInitializers): Set dumpingInitializers.
	* ProcInitializer.java (emitLoadModuleMethod): Handle the case
	that moduleInstanceVar might be dead.

2014-05-26  Per Bothner  <per@bothner.com>

	* ApplyExp.java (compile): Re-throw if exception when inlining.

	* ApplyExp.java (createArray): Moved to CompileArrays.

2014-05-24  Per Bothner  <per@bothner.com>

	* ApplyExp.java (adjustSplice, spliceCount, isSimple):
	Some splicing-related helper methods.
	(isInlineable): New method.
	(asInlineable): Removed.
	(inlineCompile): Use InlineCalls.resolveInliner.
	Also check new Procedure.compilerXKey property.
	(compile): Compile splice-using calls and checking for inlining.
	* InlineCalls.java: Some refactoring of maybeInline.
	(resolveInliner): New helper method.
	* QuoteExp.java (validateApply): Simplify.

2014-05-21  Per Bothner  <per@bothner.com>

	* KawaScriptEngine.java (compile): Don't try to get the URL
	from a CharrArrayInPort.

2014-05-17  Per Bothner  <per@bothner.com>

	* InlineCalls.java (inineCall): Do noteValue for parameter on
	inlined let initializer - even if parameter is written to.
	Fixes Savannah bug #42377 "ClassFormatError".

2014-05-14  Per Bothner  <per@bothner.com>

	* Language.java (PARSE_EMIT_MAIN): New constant.
	(parse): Use it to set 'main' option.
