@@ -7,7 +7,7 @@
 ;; This simplified/hacked version of next-leaf-generator from test.scm
 ;; used to cause a VerifyError (due to a bug in setCallersNeedStaticLink
 ;; in LambdaExp.java).
-(define (next-leaf-generator eot)
+(define (next-leaf-generator1 eot)
   (letrec ((cont (lambda (x)
                    (cond (x (list x eot))
                          (else
@@ -15,5 +15,14 @@
                                 (lambda (x) eot))
                           (cont #t))))))
     (cont #f)))
-(format #t "lg: ~a~%" (next-leaf-generator 'eot))
-;; Output: lg: (#t eot)
+(format #t "lg1: ~a~%" (next-leaf-generator1 'eot))
+;; Output: lg1: eot
+
+(define (next-leaf-generator2 eot)
+  (letrec ((cont (lambda (x)
+                   (set! cont
+                         (lambda (x) eot))
+                   (cont #t))))
+    (cont #f)))
+(format #t "lg2: ~a~%" (next-leaf-generator2 'eot))
+;; Output: lg2: eot
